v0.0.8： 新增内容 (1) 添加了“气密锻造机”
内容改动
(1) 气密壳装管道：现在不再能使用气密板关闭
(2) 空气压缩机：现在细雪和霜冰也被视为被动冷却源，并细分了被动冷却源的冷却效率
(3) 气密盔甲：
	a. 现在气密靴子的移动效率升级可以免疫传送带的推动
	b. 调整了一些升级的升级所需物品与气体消耗量
	c. 调整了一些升级的实现方式
	d. 现在允许在附魔台里附魔
(4) 气密加农炮：
	a. 现在支持更多的魔咒，包括所有弓与弩的附魔（穿透除外）
	b. 现在发射的失败提示更加明确
	c. 现在允许在附魔台里附魔
(5) 气密手持钻：
	a. 现在只能通过长按右键进行范围攻击
	b. 现在会在升级的描述文本中说明消耗的气体倍率
	c. 调整了基础功能和升级的气体消耗量
	d. 优化了破坏时的统计算法，以减少性能上的开销
(6) 气密驱动组：
	a. 现在余料生成的初始等级从4级开始
	b. 现在孢子空气和幽匿空气可以用于产生余料
	c. 优化了供气统计算法
(7) 气密反应釜：
	a. 现在无法通过底部进行交互
	b. 现在可以执行与辊压机相同的无序合成配方
	c. 修改了合成配方
	d. 优化了物品的渲染和交互逻辑
	e. 优化了输出侧的多个判定逻辑
(8) 特斯拉涡轮机：
	a. 优化了光照渲染逻辑
	b. 优化了供气统计算法
(9) 合成配方相关改动：
	a. 神秘转换配方现在出现在机械动力本体的JEI界面中
	b. 批量冰镇配方现在不默认返回合成剩余物，而需要配方手动写明
(10) 杂项：
	a. 优化了气体系统的传输与交互逻辑
	b. 重新编写了进度树
	c. 重新绘制了气密系列的材质
(11) 修复了如下bug：
	a. 使用Ctrl+中键选择已经形成多方块结构的气密储罐，放下来的储罐会连接到原来的储罐上
	b. 普通的黑曜石砖块也被当成附魔台的有效方块
	c. 空气压缩机在未运行时也会随机消耗下方的被动冷却源
	d. 查看气体的配方与产物时，JEI会错误地展示气体的用途
	e. 旋风人冷却室和旋风人蓄风室里的旋风人始终处于满光照状态
	f. 在思索文本中，坚固板条箱的容量倍率描述错误
	g. 气罐的节流附魔不正常生效
	h. 气密加农炮发射的风弹弹射物在退出重进后会直接爆炸
	i. 气罐组里使用创造气罐时未显示无限而是显示具体的容量
	j. 气密手持钻在关闭方块掉落后无法进行范围挖掘